5.KeyUp Event in Angular 5(Event)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,7 @@
   </tr>
 </table>
 -->
-<!-- -->
+<!-- 3.Pass Object List from Component to View(Componentand view)
 <h3>Products List</h3>
 <table border="1">
   <tr>
@@ -56,3 +56,15 @@
     <td>{{product.price * product.quantity}}</td>
   </tr>
 </table>
+-->
+<!-- 4.Click Event in Angular 5 (Event) -->
+<form>
+  <!--
+  <input type="buttin" value="Click Me" (click)="clickMe()">
+  <br>
+  {{result}}
+  -->
+  <input type="text" placeholder="Input your name" (keyup)="display($event)">
+  <br>
+  {{result}}
+</form>
