8.Select Element from List with Change Event in Angular 5(Event)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,12 +72,18 @@
 {{result}}
 -->
 <form>
+  <!--
   <select (change)="display($event)">
     <option value="c1">Category 1</option>
     <option value="c2">Category 2</option>
     <option value="c3">Category 3</option>
     <option value="c4">Category 4</option>
   </select>
+-->
+<select (change)="display($event)">
+  <option *ngFor="let category of categories" value="{{category.id}}">{{category.name}}</option>
+</select>
   <br>
-  {{result}}
+  <!-- {{result}} -->
+  <span [innerHTML]="result"></span>
 </form>
