--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -91,7 +91,7 @@
 </form>
 
 <form>
-  <input type="file" (change)="save($event)">
+  <input type="file" (change)="save($event)" multiple="multiple" >
   <br>
   <span [innerHTML]="result"></span>
 </form>
