11.One-Way Data Binding in Angular 5(Data Binding)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -97,7 +97,8 @@
 </form>
 
 <form>
-  <input type="text" [ngModel]="result" [ngModelOptions]="{standalone: true}">
+  <!-- <input type="text" [ngModel]="result" [ngModelOptions]="{standalone: true}"> -->
+  <input type="text" [(ngModel)]="result" [ngModelOptions]="{standalone: true}">
   <br>
   {{result}}
 </form>
