--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -113,13 +113,65 @@
       <td>
         <input type="text" formControlName="username">
       </td>
+      <td>
+        <div *ngIf="registerForm.get('username').touched">
+          <div *ngIf="registerForm.hasError('required', ['username'])">
+            This field is required.
+          </div>
+          <div *ngIf="registerForm.hasError('minlength', ['username'])">
+              Pleaes enter at least 3 characters.
+            </div>
+            <div *ngIf="registerForm.hasError('maxlength', ['username'])">
+                Pleaes enter no more than 10 characters.
+              </div>
+        </div>
+      </td>
     </tr>
     <tr>
         <td>Password</td>
         <td>
-          <input type="text" formControlName="password">
+          <input type="password" formControlName="password">
+        </td>
+        <td>
+            <div *ngIf="registerForm.get('password').touched">
+                <div *ngIf="registerForm.hasError('required', ['password'])">
+                  This field is required.
+                </div>
+                <div *ngIf="registerForm.hasError('pattern', ['password'])">
+                    Your password does not meet complexity requirements.
+                  </div>
+              </div>
         </td>
       </tr>
+      <tr>
+          <td>Email</td>
+          <td>
+            <input type="text" formControlName="email">
+          </td>
+          <td>
+              <div *ngIf="registerForm.get('email').touched">
+                  <div *ngIf="registerForm.hasError('required', ['email'])">
+                    This field is required.
+                  </div>
+                  <div *ngIf="registerForm.hasError('pattern', ['email'])">
+                      Your enter a valid email address.
+                    </div>
+                </div>
+          </td>
+        </tr>
+        <tr>
+            <td>Website</td>
+            <td>
+              <input type="text" formControlName="website">
+            </td>
+            <td>
+                <div *ngIf="registerForm.get('website').touched">
+                    <div *ngIf="registerForm.hasError('pattern', ['website'])">
+                      Please enter a valid URL.
+                    </div>
+                  </div>
+            </td>
+          </tr>
       <tr>
           <td valign="top">Description</td>
           <td>
@@ -171,7 +223,7 @@
         <tr>
           <td>&nbsp;</td>
           <td>
-            <input type="submit" value="Save">
+            <input type="submit" value="Save" [disabled]="registerForm.invalid">
           </td>
         </tr>
   </table>
