15.Create and Use Service in Angular 5

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -105,6 +105,7 @@
   {{result}}
 </form>
 -->
+<!--
 <h3>Register Form</h3>
 <form [formGroup]="registerForm" (ngSubmit)="save()">
   <table>
@@ -245,3 +246,9 @@
         </tr>
   </table>
 </form>
+-->
+Result 1: {{result1}}
+<br>
+Result 2: {{result2}}
+<br>
+Result 3: {{result3}}
