--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -247,8 +247,57 @@
   </table>
 </form>
 -->
+<!--
 Result 1: {{result1}}
 <br>
 Result 2: {{result2}}
 <br>
 Result 3: {{result3}}
+-->
+<h3>Product Info</h3>
+<table border="1">
+  <tr>
+    <td>Id</td>
+    <td>{{product.id}}</td>
+  </tr>
+  <tr>
+      <td>Name</td>
+      <td>{{product.name}}</td>
+  </tr>
+  <tr>
+      <td>Photo</td>
+      <td>
+        <img src="assets/images/{{product.photo}}" width="100"/>
+      </td>
+  </tr>
+  <tr>
+      <td>Price</td>
+      <td>{{product.price}}</td>
+  </tr>
+  <tr>
+      <td>Quantity</td>
+      <td>{{product.quantity}}</td>
+  </tr>
+<table>
+
+  <h3>Product List</h3>
+  <table border="1">
+    <tr>
+      <th>Id</th>
+      <th>Name</th>
+      <th>Photo</th>
+      <th>Price</th>
+      <th>Quantity</th>
+      <th>Sub Total</th>
+    </tr>
+    <tr *ngFor="let p of products">
+      <td>{{p.id}}</td>
+      <td>{{p.name}}</td>
+      <td>
+          <img src="assets/images/{{p.photo}}" width="100"/>
+      </td>
+      <td>{{p.price}}</td>
+      <td>{{p.quantity}}</td>
+      <td>{{p.price * p.quantity}}</td>
+    </tr>
+  </table>
